/*
 * This file is part of Dependency-Track.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 * Copyright (c) OWASP Foundation. All Rights Reserved.
 */
syntax = "proto3";

package org.dependencytrack.internal.workflow.v1;

option java_multiple_files = true;
option java_package = "org.dependencytrack.proto.internal.workflow.v1";

// Argument of the discover-csaf-providers workflow and activity.
message DiscoverCsafProvidersArg {
  // ID of the aggregator to discover providers from.
  string aggregator_id = 1;
}

// Argument of the import-csaf-documents workflow and activity.
message ImportCsafDocumentsArg {
  // ID of the provider to import documents from.
  string provider_id = 1;
}